Fixed Logo Position on mobile

--- a/src/components/Home/Header/Logo.module.scss
+++ b/src/components/Home/Header/Logo.module.scss
@@ -8,7 +8,7 @@
     transition: all 0.3s ease-in-out;
     @media (max-width: 768px) {
       width: 25rem;
-      margin: 5% auto 0%;
+      margin: 1.2rem auto 0;
     }
   }
 }
